--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -81,6 +81,23 @@
       }
     }
 
+    &--place {
+      position: absolute;
+      top: 0;
+      right: 130px;
+      height: 156px;
+      line-height: 156px;
+      font-size: 4rem;
+      color: $color-box;
+    }
+
+    &--intro {
+      width: 95%;
+      font-size: 1.5rem;
+      margin: 20px auto;
+      text-align: end;
+    }
+
     &--check {
       width: 100px;
       height: 146px;
@@ -175,6 +192,23 @@
         width: 30px;
         height: 30px;
       }
+    }
+
+    &--place {
+      position: absolute;
+      top: 0;
+      right: 90px;
+      height: 100px;
+      line-height: 100px;
+      font-size: 3rem;
+      color: $color-box;
+    }
+
+    &--intro {
+      width: 95%;
+      font-size: 1.2rem;
+      margin: 20px auto;
+      text-align: end;
     }
 
     &--check {
