--- a/src/Main/components/InfoQuestion/stylesheet.scss
+++ b/src/Main/components/InfoQuestion/stylesheet.scss
@@ -5,6 +5,7 @@
     width: 100%;
     font-size: 3.5rem;
     font-weight: lighter;
+    line-height: 4.5rem;
 
     strong {
       color: $color-secondary;
@@ -22,6 +23,7 @@
     width: 100%;
     font-size: 2.2rem;
     font-weight: lighter;
+    line-height: 3.2rem;
 
     strong {
       color: $color-secondary;
