--- a/src/Main/components/Header/stylesheet.scss
+++ b/src/Main/components/Header/stylesheet.scss
@@ -6,7 +6,8 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 70px;
+    max-height: 70px;
+    height: auto;
     display: flex;
     justify-content: space-between;
     z-index: 100;
@@ -14,7 +15,7 @@
     &__result {
       width: 50px;
       height: 50px;
-      margin: 30px 20px;
+      margin: 10px 20px;
     }
 
     &__logo {
@@ -38,7 +39,7 @@
     &__menu {
       width: 70px;
       height: 70px;
-      margin: 25px 15px;
+      margin-right: 10px;
 
       img {
         width: 100%;
@@ -52,7 +53,7 @@
     height: auto;
     z-index: 100;
     position: absolute;
-    top: 100px;
+    top: 70px;
     background-color: $color-theme;
 
     &__ul {
