--- a/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
@@ -4,8 +4,8 @@
   .prescription {
     width: 100%;
     display: flex;
-    height: 280px;
-    min-height: 100%;
+    min-height: 210px;
+    height: auto;
     position: relative;
 
     &__on {
@@ -30,82 +30,32 @@
       }
     }
 
-    &__section {
-      width: 100%;
-      height: 200px;
-      display: flex;
-      position: relative;
-
-      &--img {
-        width: 120px;
-        height: 120px;
-        border-radius: 5px;
-        margin: auto 40px auto 20px;
-      }
-
-      &--description {
-        width: 65%;
-        height: 90%;
-        margin: auto 0;
-
-        &--header {
-          margin: 10px;
-          font-size: 2rem;
-          font-weight: bolder;
-        }
-
-        ul {
-          overflow: hidden;
-          height: 100px;
-          margin-top: 20px;
-          padding-left: 5%;
-          list-style-type: circle;
-
-          li {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-          }
-        }
-      }
-
-      &--bottom {
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        width: 20px;
-        height: 20px;
-
-        &--close {
-          width: 100%;
-          height: 100%;
-        }
-      }
-    }
-
     &__cover {
-      width: 35%;
-      height: 100%;
+      width: 30%;
+      min-height: 210px;
+      height: auto;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: skyblue;
 
       &--img {
-        width: 100px;
-        height: 100px;
+        width: 60px;
+        height: auto;
       }
     }
 
     &__info {
-      width: 65%;
-      height: 100%;
+      width: 70%;
+      min-height: 210px;
+      height: auto;
       background-color: $color-box;
 
       &--header {
         width: 95%;
         display: block;
-        font-size: 1.2rem;
-        margin: 20px auto 15px;
+        font-size: 0.9rem;
+        margin: 15px auto;
         font-weight: lighter;
       }
 
@@ -118,11 +68,11 @@
         line-height: 2.2rem;
 
         strong {
-          font-size: 2rem;
+          font-size: 1.6rem;
         }
 
         span {
-          font-size: 1.5rem;
+          font-size: 1.3rem;
           vertical-align: bottom;
         }
       }
@@ -130,12 +80,12 @@
       &--description {
         width: 95%;
         line-height: 2rem;
-        font-size: 1.2rem;
-        margin-left: 40px;
+        font-size: 1rem;
+        margin-left: 30px;
         list-style: circle;
 
         &:first-child {
-          margin-top: 20px;
+          margin-top: 10px;
         }
       }
 
@@ -158,33 +108,36 @@
   .prescription {
     width: 100%;
     display: flex;
-    height: 220px;
-    min-height: 100%;
+    min-height: 150px;
+    height: auto;
+    max-height: auto;
 
     &__cover {
       width: 30%;
-      height: 100%;
+      min-height: 150px;
+      height: auto;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: skyblue;
 
       &--img {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: auto;
       }
     }
 
     &__info {
       width: 70%;
-      height: 100%;
+      min-height: 150px;
+      height: auto;
       background-color: $color-box;
 
       &--header {
         width: 95%;
         display: block;
-        font-size: 0.9rem;
-        margin: 10px auto 15px;
+        font-size: 0.8rem;
+        margin: 10px auto;
         font-weight: lighter;
       }
 
@@ -192,16 +145,16 @@
         display: flex;
         justify-content: space-between;
         width: 95%;
-        margin: 0 auto 10px;
+        margin: 0 auto 5px;
         border-bottom: 1px solid;
-        line-height: 2.2rem;
+        line-height: 2rem;
 
         strong {
-          font-size: 1.5rem;
+          font-size: 1.2rem;
         }
 
         span {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
           vertical-align: bottom;
         }
       }
@@ -214,7 +167,7 @@
         list-style: circle;
 
         &:first-child {
-          margin-top: 15px;
+          margin-top: 5px;
         }
       }
     }
