--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -5,33 +5,34 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 100px;
+    top: 70px;
     left: 0;
     right: 0;
     overflow: auto;
     overflow-x: hidden !important;
 
-    &::-webkit-scrollbar {
-      // width: 3px;
-      // background-color: none;
-      // position: absolute;
-    }
+    // &::-webkit-scrollbar {
+    //   // width: 3px;
+    //   // background-color: none;
+    //   // position: absolute;
+    // }
 
-    &::-webkit-scrollbar-thumb {
-      background-color: #2f3542;
-    }
+    // &::-webkit-scrollbar-thumb {
+    //   background-color: #2f3542;
+    // }
+
     &__header {
       width: 100%;
       height: auto;
       background-color: rgb(247, 247, 247);
-      padding: 30px 0 30px;
+      padding: 20px 0;
 
       &--title {
         width: 90%;
-        margin: 0 auto 20px;
-        font-size: 2.8rem;
+        margin: 0 auto 5px;
+        font-size: 2.5rem;
         font-weight: lighter;
-        line-height: 3.4rem;
+        line-height: 3.5rem;
         border-bottom: 1px solid;
       }
 
@@ -41,7 +42,7 @@
         align-items: center;
         font-size: 1.6rem;
         font-weight: lighter;
-        margin: 40px auto;
+        margin: 20px auto 30px;
 
         &--item {
           margin: auto;
@@ -56,7 +57,7 @@
 
       &--bmi {
         width: 90%;
-        margin: 0 auto 20px;
+        margin: 0 auto 5px;
         display: flex;
         height: 30px;
         background-color: none;
@@ -65,7 +66,7 @@
           width: 20%;
           height: 1.5rem;
           text-align: center;
-          font-size: 1.5rem;
+          font-size: 1.4rem;
           margin: auto;
           background-color: none;
         }
@@ -95,7 +96,7 @@
         border: 1px solid rgb(244, 149, 152);
         border-radius: 50px;
         overflow: hidden;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         width: 100% !important;
       }
 
@@ -103,7 +104,7 @@
         display: block;
         width: 90%;
         margin: auto;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
       }
     }
 
@@ -137,7 +138,7 @@
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 100px;
+      height: 85px;
       background: $color-theme;
 
       &--pulish {
@@ -188,10 +189,10 @@
 
       &--title {
         width: 90%;
-        margin: 0 auto 30px;
-        font-size: 1.8rem;
+        margin: 0 auto 15px;
+        font-size: 1.5rem;
         font-weight: lighter;
-        line-height: 2.8rem;
+        line-height: 2.2rem;
         border-bottom: 1px solid;
       }
 
@@ -199,9 +200,9 @@
         width: 75%;
         display: flex;
         align-items: center;
-        font-size: 1.1rem;
+        font-size: 1rem;
         font-weight: lighter;
-        margin: 20px auto;
+        margin: 5px auto;
 
         &--item {
           margin: auto;
@@ -214,16 +215,15 @@
 
       &--bmi {
         width: 90%;
-        margin: 0 auto 10px;
+        margin: 0 auto;
         display: flex;
         height: 25px;
 
         &--list {
           width: 20%;
-          height: 1.2rem;
           text-align: center;
-          font-size: 1rem;
-          margin: auto;
+          font-size: 0.8rem;
+          margin: 10px auto;
 
           &--gauge {
             width: 100%;
@@ -255,7 +255,7 @@
         border: 1px solid rgb(244, 149, 152);
         border-radius: 50px;
         overflow: hidden;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         width: 100% !important;
       }
 
@@ -263,7 +263,7 @@
         display: block;
         width: 90%;
         margin: auto;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
       }
     }
 
@@ -274,9 +274,9 @@
 
       &--title {
         width: 90%;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         font-weight: lighter;
-        line-height: 4rem;
+        line-height: 3rem;
         display: block;
         margin: auto;
       }
@@ -349,7 +349,7 @@
 
     &__ad {
       width: 100%;
-      height: 400px;
+      height: 330px;
 
       img {
         width: 100%;
@@ -362,7 +362,7 @@
       bottom: 0;
       display: flex;
       width: 100%;
-      height: 90px;
+      height: 65px;
       background: $color-theme;
 
       &--pulish {
