--- a/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
@@ -4,8 +4,7 @@
   .prescription {
     width: 100%;
     display: flex;
-    min-height: 210px;
-    height: auto;
+    height: 280px;
     position: relative;
 
     &__on {
@@ -77,11 +76,15 @@
         }
       }
 
+      ul {
+        height: 140px;
+      }
+
       &--description {
         width: 95%;
         line-height: 2rem;
         font-size: 1rem;
-        margin-left: 30px;
+        margin-left: 35px;
         list-style: circle;
 
         &:first-child {
