--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -250,7 +250,7 @@
     }
 
     &__popup {
-      position: absolute;
+      position: fixed;
       bottom: 9rem;
       right: 2%;
       width: 70%;
