--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -38,6 +38,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 
     &__main {
       padding: 20px;
