--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -3,7 +3,7 @@
 @include media('>medium') {
   .main {
     width: 800px;
-    height: 100%;
+    height: 100vh;
     margin: 0 auto;
     position: relative;
     background-color: $color-theme;
