--- a/src/Admin/views/Home/stylesheet.scss
+++ b/src/Admin/views/Home/stylesheet.scss
@@ -35,6 +35,7 @@
         height: 2rem;
         border: 1px solid rgb(221, 221, 221);
         margin-left: 10px;
+        font-size: 1.1rem;
 
         &:first-child {
           margin-right: 10px;
@@ -43,49 +44,12 @@
     }
   }
 
-  &--table {
-    width: 100%;
-
-    &--header {
-      width: 100%;
-      height: 2.5rem;
-      line-height: 2.5rem;
-      font-size: 1.25rem;
-
-      &--th {
-        border: 1px solid rgb(221, 221, 221);
-        background-color: rgb(244, 244, 244);
-      }
-    }
-
-    &--body {
-      width: 100%;
-      height: 2rem;
-      line-height: 2rem;
-      text-align: center;
-
-      &--td {
-        border: 1px solid rgb(221, 221, 221);
-      }
-    }
-  }
-
-  &--page {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-
-    &--btn {
-      width: 40px;
-      border: 1px solid rgb(221, 221, 221);
-      padding: 10px;
-      margin: 10px 5px;
-      color: #34acad;
-      font-weight: bold;
-    }
-
-    &--on {
-      background-color: rgb(244, 244, 244);
-    }
+  &--submit {
+    margin: 10px auto 20px;
+    font-size: 1.2rem;
+    background-color: rgb(56, 171, 173);
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
   }
 }
